[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Capacities/AutomaticPathFinder/AutomaticPathFinderCapacity.gd" type="Script" id=1]
[ext_resource path="res://scenes/Capacities/PathFinderSetDirection/PathFinderSetDirectionCapacity.tscn" type="PackedScene" id=2]

[node name="AutomaticPathFinderCapacity" type="Node2D"]
script = ExtResource( 1 )

[node name="PathFinderSetDirection" parent="." instance=ExtResource( 2 )]
owner_node = NodePath("..")

[node name="Timer" type="Timer" parent="."]

[connection signal="path_achieved" from="PathFinderSetDirection" to="." method="_on_PathFinderSetDirection_path_achieved"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PathFinderSetDirection"]
